feat(api): add excluded_from_rate_limiting in AuthorizeResponse
