# api/v1/rbac_manager_service.swagger.json
@@ -79,6 +79,10 @@
         "apiKeyId": {
           "type": "string",
           "description": "api_key_id is the id of the api key used to authorize the request. It is only set if the request was authorized using an api key."
+        },
+        "excludedFromRateLimiting": {
+          "type": "boolean",
+          "title": "indicates whether the API key used for authorization is excluded from rate limiting"
         }
       }
     },
